# quant-trading-system

./: .env.example  README.md  plan.md  pyproject.toml
app/: __init__.py  cli.py
app/config/: settings.py
app/data/: __init__.py  models.py
app/data/providers/: __init__.py  base.py
tests/: test_cli.py  test_daily_bar.py  test_settings.py
