[project]
name = "quant-trading-system"
version = "0.1.0"
description = "Quant trading system with backtesting, risk controls, and IBKR paper execution."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ib-insync>=0.9.86,<1.0.0",
    "numpy>=2.2.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "typer>=0.15.0,<1.0.0",
    "yfinance>=0.2.0,<1.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[project.scripts]
qts = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/tests",
    "/README.md",
    "/plan.md",
    "/pyproject.toml",
    "/.env.example",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]
